adding admin panel

--- a/public/css/ccc.css
+++ b/public/css/ccc.css
@@ -487,8 +487,8 @@ background-image: linear-gradient(45deg, rgb(11, 23, 46), 65%, rgb(194, 210, 242
     width: 40%;
     border-radius: 5px;
     background: rgb(145, 101, 63);
-    margin: 0 auto;
-    margin-top: 110px;
+    margin: 50px auto;
+    /*margin-top: 110px;*/
     transition: all 0.2s linear;
 }
 #signin-con .sub:focus{
@@ -663,14 +663,14 @@ input:-webkit-autofill:focus{
 }
 #signin-con{
     text-align: center;
-    background: url('site_images/wood.jpg');
+    background: url('../site_images/wood.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 5px;
 }
 .img-con{
     border-left: 1px solid rgb(50, 54, 50);
-    background: url('site_images/signin-img.jpeg');
+    background: url('../site_images/signin-img.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 5px;
@@ -1439,7 +1439,7 @@ thead{
    height: 600px;
 }
 #signin-con {
-   background-image: linear-gradient(180deg, hsl(0 0% 0% / 0.8), rgb(21 21 21 / 0.6)),url(https://amirsbookstore.ir/site_images/signin-img.jpeg);
+   background-image: linear-gradient(180deg, hsl(0 0% 0% / 0.8), rgb(21 21 21 / 0.6)),url('../site_images/signin-img.jpeg');
 }
 .img-con{
    display: none;
